[package]
name = "editor"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0-alpha3"
crossbeam-channel = "0.3.9"
slotmap = "0.4.0"
ropey = "1.1.0"

wgpu = { version = "0.3", git = "https://github.com/gfx-rs/wgpu-rs", rev = "cb25914b95b58fee0dc139b400867e7a731d98f4" }
glyph_brush = "0.6.0"
wgpu_glyph = { version = "0.4.0", git = "https://github.com/hecrj/wgpu_glyph.git" }
