[package]
name = "editor"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.20.0"
slotmap = "0.4.0"
ropey = "1.1.0"

wgpu = "0.4"
glyph_brush = "0.6.0"
wgpu_glyph = "0.6.0"
vek = "0.9.9"
fuzzy-matcher = "0.2.1"
walkdir = "2.2.9"
itertools = "0.8.0"
regex = "1.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_yaml = "0.8.11"
lazy_static = "1.4.0"
fancy-regex = "0.3.1"
structopt = "0.3.7"
serde_json = "1.0.44"
anyhow = "1.0.26"
thiserror = "1.0.9"
colorsys = "0.5.3"
