[package]
name = "editor"
version = "0.1.0"
authors = ["Pearce Keesling <pearce.keesling@lifeomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.21.0"
slotmap = "0.4.0"
ropey = "1.1.0"

vek = "0.9.9"
fuzzy-matcher = "0.2.1"
walkdir = "2.2.9"
itertools = "0.8.0"
serde = { version = "1.0.101", features = ["derive"] }
lazy_static = "1.4.0"
structopt = "0.3.7"
serde_json = "1.0.44"
anyhow = "1.0.26"
thiserror = "1.0.9"
flame = "0.2.2"
flamer = "0.4.0"
imgui-wgpu = "0.6.0"
imgui = "0.3.0"
futures = "0.3.4"
wgpu = "0.5.0"

imgui-winit-support = "0.3.1"
glium = { git = "https://github.com/glium/glium", rev = "fb567dbc40718c8e5cdc9da41b7e4e803439376b" }
syntect = "4.1.1"

[patch.crates-io]
glium = { git = "https://github.com/glium/glium", rev = "fb567dbc40718c8e5cdc9da41b7e4e803439376b" }
